<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:id="@+id/inference_lay">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:layout_weight="2"
            android:text="@string/layout_infer_type" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:layout_weight="1.5"
            android:text="@string/layout_list_longitude" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="5dp"
            android:layout_weight="1.5"
            android:text="@string/layout_list_latitude" />
    </LinearLayout>
</LinearLayout>