<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/layout_list_date"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/layout_list_latitude"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/layout_list_longitude"
            android:textSize="12sp" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>